# team-in-a-box

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
apps/brain/: Dockerfile  README.md  deploy.sh  docker-compose.yml  package.json  tsconfig.json
apps/brain/src/: index.ts
apps/embedding-worker/: package.json  wrangler.toml
apps/embedding-worker/src/: index.ts  (+1 more)
apps/frontend/: package-lock.json  tsconfig.json
apps/inbound-event-worker/: package.json  wrangler.toml
apps/outbound-event-worker/: package-lock.json  package.json  tsconfig.json
backend/: .env  README.md  docker-compose.yml  pyproject.toml
backend-v2/inbound-event-worker/: wrangler.toml
backend-v2/repo-interactor/: package.json
backend/app/: main.py
backend/app/api/routes/: projects.py  tickets.py
backend/app/core/: config.py
backend/app/db/: agents.py  base.py  mongodb.py  projects.py  tickets.py
backend/app/schemas/: agent.py  common.py  event_stream.py  project.py  ticket.py
backend/app/testing/: test.py
backend/app/utils/: id_gen.py
frontend/: package.json
infra/: deploy.sh  main.tf
infra/aws/: deploy.sh  event_stream_lambda.tf  event_stream_processor_lambda.tf  lambda_to_mongo.tf
infra/cloudflare/: deploy.sh  index.js
infra/event-stream-lambda/: build.sh  deploy.sh  lambda_function.py  main.tf
infra/event_stream_processor_lambda/: lambda_function.py  package_lambda.sh
scripts/: create-droplet.sh  ssh-keygen.sh
scripts/cloudflare/: sync-worker-secrets.sh
turbo-test/: package.json
types/: package.json
types/src/: events.ts
(+51 files in other folders)
