[tool.poetry]
name = "team-in-a-box-api"
version = "0.1.0"
description = ""
authors = ["Farmerbilly27 <dmw2796@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
motor = "^3.5.1"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
